# rea

./: CMakeLists.txt  README.md
docs/: rea_evolution_ideas.md  rea_language_reference.md  rea_overview.md  rea_programmers_guide.md  rea_tutorial.md
examples/base/: base_syntax  crt_demo  dump_ext_builtins  flow  hangman1  hangman5  hello  inheritance_and_constructor  method_demo  myself  openai_chat_demo  polymorphism  showcase  sqlite_spotify_demo  stringio  threads  variable_format
examples/base/archive/: openweather_forecast
examples/sdl/: block_game  l2  landscape  landscape2  landscape_simple  lsave  mandelbrot_interactive  mandelbrot_interactive_ext  multibouncingballs  multibouncingballs_3d  oop_multibouncingballs_3d  planets  planets_earth  planets_inner  planets_inner_3d
src/rea/: LANGUAGE_SPEC.md  README.md  ast.c  ast.h  frontend_hooks.c  frontend_hooks.h  lexer.c  lexer.h  main.c  parser.c  parser.h  semantic.c  semantic.h  state.c  state.h  stubs.c  type_stubs.c
src/rea/builtins/: thread.c  thread.h
tests/: run.sh
tests/Tests/data/: yyjson_sample.json
tests/rea/: array_decl.out  array_decl.rea  array_element_read.err  array_element_read.rea  array_literal_init.out  array_literal_init.rea  assign_expr.err  assign_expr.rea  balls3d_builtin_compare.out  balls3d_builtin_compare.rea  balls3d_demo_regression.out  balls3d_demo_regression.rea  block_decl.err  block_decl.rea  bytecode_dump.err  bytecode_exec.err  bytecode_exec.rea  casts.out  casts.rea  class_decl.err  class_decl.rea  class_field_defaults.out  class_field_defaults.rea  class_forward_reference.out  class_forward_reference.rea  class_instantiation.args  class_instantiation.err  class_instantiation.rea  class_self_reference.out  class_self_reference.rea  comment_after_expression_tail.rea  compound_assign_extended.rea  constructor_default.rea  constructor_init.err  constructor_init.rea  continue_for.rea  continue_for_var_reuse.out  continue_for_var_reuse.rea  continue_repeat.rea  continue_while.rea  (+60 more)
tests/tools/: harness_utils.sh  regen_golden.sh  run_with_timeout.py
tests/tools/fixtures/: cli_rea.rea
